tests/compile-errors/ce-closure-in-loop.valk

fn main() {
    while true {
        fn() {
            break
        }
    }
}
